# Frappe-Nigeria-NRS-Compliance

./: .dockerignore  .gitignore  README.md  license.txt  pyproject.toml
nrs_compliance/: hooks.py  install.py  modules.txt  utils.py
nrs_compliance/api/: build_nrs_payload.py  client.py  nrs_queue.py  nrs_submission.py  nrs_validation.py  permissions.py  reference_data.py
nrs_compliance/nrs_compliance/doctype/firs_tax_category/: firs_tax_category.json  firs_tax_category.py
nrs_compliance/nrs_compliance/doctype/nrs_e_invoicing_setup/: nrs_e_invoicing_setup.js  nrs_e_invoicing_setup.json  nrs_e_invoicing_setup.py
nrs_compliance/nrs_compliance/doctype/nrs_logs/: nrs_logs.json  nrs_logs.py
nrs_compliance/nrs_compliance/doctype/nrs_queue/: nrs_queue.json  nrs_queue.py
nrs_compliance/nrs_compliance/print_format/nrs_sales_invoice/: nrs_sales_invoice.json
nrs_compliance/nrs_compliance/workspace/nrs_compliance/: nrs_compliance.json
nrs_compliance/public/js/: company.js  sales_invoice.js  sales_invoice_list.js
